# median-code

./: .gitignore  README.md  TESTING_VALIDATION.md  api-spec.yaml  orchestrator.py  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.vitest.json  vercel.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
dashboard/: .env.example  README.md  package.json  tailwind.config.js
docs/: COMMIT_MESSAGE_STANDARD.md  MIGRATION_SVELTEKIT.md  PAGES_AND_FEATURES.md  TESTING_COMPLETE.md  TESTING_IMPLEMENTATION_STATUS.md  TESTING_QUICK_START.md  api-generator-refactor-plan.md  api-generator-request-response-plan.md  api-spec-guide.md  api-spec-update-plan.md  component-extraction-plan.md  field-object-click-fix-plan.md  testing.md  (+7 more)
mock_api/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml
mock_api/src/mock_api/: __init__.py  main.py
mock_api/src/mock_api/auth/: __init__.py  clerk.py
mock_api/src/mock_api/data/: __init__.py  store.py
mock_api/src/mock_api/fixtures/: data.json
mock_api/src/mock_api/models/: __init__.py  field.py  object.py  type.py  validator.py
mock_api/src/mock_api/routes/: __init__.py  fields.py  objects.py  types.py  validators.py
mock_api/src/mock_api/schema/: definitions.json
mock_api/tests/: __init__.py  conftest.py  test_main.py  test_models.py
mock_api/tests/test_auth/: test_clerk.py
mock_api/tests/test_data/: test_store.py
mock_api/tests/test_routes/: test_fields.py  test_objects.py  test_types.py  test_validators.py
(+159 files in other folders)
